docker-compose/example/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sc1
spec:
  hosts:
  - sc1.service.consul
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: sc1.service.consul
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sc1
spec:
  host: sc1.service.consul
  subsets:
  - name: v1
    labels:
      version: v1
